# F550_final_project

./: .gitignore  README.md  environment_ex1.yml  pyproject.toml
data/raw/: nvda_prices.csv
notebooks/: ex1_preprocess.ipynb  ex1_sentiment.ipynb  ex2.ipynb
src_ex1/: ex1_preprocess.py  ex1_sentiment.py
src_ex2/: ex2_agent.py  ex2_backtest.py  ex2_inputs.py  ex2_openai_backend.py
